--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ sqlalchemy==2.0.23
 pydantic==2.5.0
 pydantic-settings==2.1.0
 python-dotenv==1.0.0
+python-multipart==0.0.6
 httpx==0.26.0
 pyjwt==2.10.1
 cryptography==46.0.3
