fix: Allow entire home directory as workspace by default
- Changed default allowed paths from specific subdirs to entire home
- Users can restrict via ALLOWED_BASE_PATHS env var if needed
- Fixes 400 error when creating rooms with paths outside ~/Projects

--- a/.env.example
+++ b/.env.example
@@ -91,3 +91,12 @@ THREADS_COMPAT_MODE=true
 # Show QR code in terminal on server startup for easy iOS app setup
 # The QR code contains: server URL, API key, and certificate fingerprint
 SHOW_QR_ON_STARTUP=false
+
+# ==========================================================
+# Workspace Path Security
+# ==========================================================
+
+# Allowed base paths for workspace directories (comma-separated)
+# By default, the entire home directory is allowed
+# Restrict for security: ALLOWED_BASE_PATHS=/Users/you/Projects,/Users/you/work
+# ALLOWED_BASE_PATHS=
