.env から Codex のデフォルト sandbox を設定できるよう追加
このPRは、.env に CODEX_DEFAULT_SANDBOX=workspace-write のような設定を追加することで、ルーム設定に codex.sandbox が無い場合のデフォルトを指定できるようにします。ルーム側で codex.sandbox を設定している場合はそちらが優先されます。

--- a/.env.example
+++ b/.env.example
@@ -85,6 +85,14 @@ BONJOUR_SERVICE_NAME=RemotePrompt Server
 THREADS_COMPAT_MODE=true
 
 # ==========================================================
+# AI CLI Defaults
+# ==========================================================
+
+# Default Codex sandbox when room settings do not specify one
+# Options: read-only, workspace-write, danger-full-access
+# CODEX_DEFAULT_SANDBOX=workspace-write
+
+# ==========================================================
 # QR Code Display
 # ==========================================================
 
